[gd_scene load_steps=13 format=3 uid="uid://c3leiijt46i16"]

[ext_resource type="Script" path="res://scripts/enemy/slime.gd" id="1_u4rla"]
[ext_resource type="Texture2D" uid="uid://cxm3c4dxlolak" path="res://images/slime/Ativo 6-8.png" id="2_4k7lk"]
[ext_resource type="Texture2D" uid="uid://bjh8lr0jkfp6c" path="res://images/slime/Ativo 7-8.png" id="3_0lpl2"]
[ext_resource type="Texture2D" uid="uid://bil7b6lh10kr" path="res://images/slime/Ativo 9-8.png" id="4_s5kw8"]
[ext_resource type="Texture2D" uid="uid://cvjknjny5xmnw" path="res://images/slime/Ativo 1-8.png" id="5_b757l"]
[ext_resource type="Texture2D" uid="uid://djrd53ywltp04" path="res://images/slime/Ativo 8-8.png" id="5_hj6ss"]
[ext_resource type="Texture2D" uid="uid://bnlj8mktgkbny" path="res://images/slime/Ativo 2-8.png" id="6_nxdb2"]
[ext_resource type="Texture2D" uid="uid://wqhes32n7wab" path="res://images/slime/Ativo 4-8.png" id="7_7r4y8"]
[ext_resource type="Texture2D" uid="uid://c0ecwk2bode55" path="res://images/slime/Ativo 3-8.png" id="8_m7qlx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iuqu1"]
radius = 144.0

[sub_resource type="SpriteFrames" id="SpriteFrames_lw3mp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4k7lk")
}, {
"duration": 1.0,
"texture": ExtResource("3_0lpl2")
}, {
"duration": 1.0,
"texture": ExtResource("4_s5kw8")
}, {
"duration": 1.0,
"texture": ExtResource("5_hj6ss")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_b757l")
}, {
"duration": 1.0,
"texture": ExtResource("6_nxdb2")
}, {
"duration": 1.0,
"texture": ExtResource("7_7r4y8")
}, {
"duration": 1.0,
"texture": ExtResource("8_m7qlx")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hk624"]
radius = 40.1995

[node name="Slime" type="CharacterBody2D" groups=["enemy", "slime"]]
z_index = 21
scale = Vector2(0.25, 0.25)
script = ExtResource("1_u4rla")

[node name="Collision" type="CollisionShape2D" parent="." groups=["enemy"]]
position = Vector2(0, -28)
scale = Vector2(0.25, 0.25)
shape = SubResource("CircleShape2D_iuqu1")
metadata/_edit_lock_ = true

[node name="Animated" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -28)
scale = Vector2(0.9, 0.929)
sprite_frames = SubResource("SpriteFrames_lw3mp")
animation = &"dead"
autoplay = "stand"
frame = 3
frame_progress = 1.0
metadata/_edit_lock_ = true

[node name="Ray_Right" type="RayCast2D" parent="."]
position = Vector2(0, -32)
target_position = Vector2(44, 0)

[node name="Ray_Left" type="RayCast2D" parent="."]
position = Vector2(0, -33)
target_position = Vector2(-44, 1)

[node name="Ray_Down_Right" type="RayCast2D" parent="."]
position = Vector2(38, -33)
target_position = Vector2(0, 40)

[node name="Ray_Down_Left" type="RayCast2D" parent="."]
position = Vector2(-35, -33)
target_position = Vector2(0, 40)

[node name="HitBox" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -28)
shape = SubResource("CircleShape2D_hk624")

[connection signal="body_entered" from="HitBox" to="." method="on_hit_box_body_entered"]
